[package]
name = "regf"
version = "0.1.0"
edition = "2021"
authors = ["Tony Su"]
description = "A Rust library for parsing, manipulating, and writing Windows Registry hive files (regf format)"
license = "MIT"
repository = "https://github.com/peitaosu/regf"
keywords = ["windows", "registry", "regf", "hive", "forensics"]
categories = ["parsing", "filesystem"]

[dependencies]
thiserror = "1.0"
byteorder = "1.5"
chrono = { version = "0.4", features = ["std"] }
bitflags = "2.4"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3.10"
hex = "0.4"

[features]
default = []
serde = ["dep:serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

